feat: enhance WebRTC functionality with room key support, media handling, and improved socket events

--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "mediasoup-client": "^3.7.14",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
